tooling/nargo_cli/tests/compile_failure/div_by_zero_modulo/src/main.nr
fn main() {
    let a: u32 = 6;
	let b = 3;
	let c = 0;
	let res = (a*b) % c;
	assert(res != 5);
}